fix(recommendations): use Map.ofEntries for 12-month map and cleanup stream/usages